# AIRUN-Evaluation-Framework

./: .gitignore  CONTRIBUTING.md  README.md  environment-osx-64.lock.yml  environment.yml  evaluate.py  pyproject.toml  requirements.txt
data/js-template/01/: input.txt  meta.yaml
data/js-template/03/: meta.yaml
data/js-template/04/: meta.yaml
data/js-template/05/: meta.yaml
data/js-template/06/: meta.yaml
data/js-template/07/: meta.yaml
data/js-template/08/: meta.yaml
data/js-template/09/: meta.yaml
data/js-template/10/: meta.yaml
data/js-template/11/: meta.yaml
data/js-template/12/: input.txt  meta.yaml
data/js-template/13/: input.txt  meta.yaml
data/js-template/14/: meta.yaml
data/js-template/15/: input.txt  meta.yaml
data/js-template/16/: input.txt  meta.yaml
data/js-template/17/: meta.yaml
data/js-template/18/: meta.yaml
data/js-template/19/: meta.yaml
data/js-template/20/: meta.yaml
data/js-template/21/: meta.yaml
data/js-template/22/: meta.yaml
data/js-template/23/: meta.yaml
data/sample/: grades.csv
data/sample/01/: accuracy.md  completeness.md  meta.yaml  output.md
data/sample/02/: accuracy.md  completeness.md  meta.yaml  output.md
data/sample/03/: accuracy.md  completeness.md  input.txt  meta.yaml  output.md
epam/auto_llm_eval/: __init__.py
notebooks/: prompt_critic.ipynb
src/epam/auto_llm_eval/: README.md  __init__.py  evaluation_report.py  evaluator.py
tests/epam/auto_llm_eval/: test_evaluation_report.py
